# dern

./: .codecov.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  GNUmakefile  LICENSE  Makefile  README.md  codecov.yml
.builds/: debian_stretch.yml  freebsd.yml  freebsd_latest.yml  netbsd_latest.yml
dev/doc/: how_to_add_Dern_into_pygments
dev/doc/book/: build_book.py  dern-manual.htm  dern-manual.org  lang.map  org-minimal-theme.setup
dev/doc/book/examples/c/: customLibraryLoader.c  mylib.c
dev/doc/book/examples/dern/: applyEvalAndGenerate.dern  argsAndEnv.dern  bindInOther.dern  binding.dern  branchingWithIf.dern  branchingWithSelect.dern  comments.dern  comparing.dern  containerFor.dern  environments.dern  eval.dern  executable.dern  formattedAndRegularPrinting.dern  formattedStringCreation.dern  hello.dern  howto.dern  ioPortAdding.dern  ioPortIteration.dern  ioPortOperations.dern  ioPortQuerySupported.dern  ioPorts.dern  iteratorStep.dern  macrosAndTemplatesUsage.dern  math.dern  minMaxDistance.dern  numericalFor.dern  removeLast.dern  removeLastWithPopBack.dern  return.dern  returnWithoutArguments.dern  searching.dern  selectingFromCollection.dern  (+7 more)
dev/doc/examples/: hello-world.dern
dev/doc/man/man1/: octaspire-dern-repl.1
dev/doc/man/man3/: octaspire-dern.3
dev/etc/: amalgamate_file.sh  amalgamate_file_literally.sh  amalgamation_head.c  amalgamation_impl_ifdef_impl.c  amalgamation_impl_tail.c  amalgamation_impl_unit_test_head.c  amalgamation_impl_unit_test_tail.c  base64_replace_image.sh  build_amalgamation.sh  bump-version.sh  clean-repo.sh  pre-push  pygments_init.rb  tag-version.sh
dev/etc/plugins/: build.sh
dev/include/octaspire/dern/: octaspire_dern_c_data.h  octaspire_dern_config.h  octaspire_dern_environment.h  octaspire_dern_helpers.h  octaspire_dern_lexer.h  octaspire_dern_lib.h  octaspire_dern_port.h  octaspire_dern_stdlib.h  octaspire_dern_value.h  octaspire_dern_vm.h
dev/src/: octaspire_dern_c_data.c  octaspire_dern_environment.c  octaspire_dern_helpers.c  octaspire_dern_lexer.c  octaspire_dern_lib.c  octaspire_dern_port.c  octaspire_dern_repl.c  octaspire_dern_stdlib.c  octaspire_dern_value.c  octaspire_dern_vm.c
dev/test/: test.c  test_dern_lexer.c  test_dern_vm.c
dev/test/resource/: octaspire_dern_vm_run_user_factorial_function_test.dern  octaspire_read_and_eval_path_test.dern
doc/: hacking  todo
doc/book/: Programming_in_Octaspire_Dern.adoc  Programming_in_Octaspire_Dern.html  dern-manual.org
doc/examples/: embedding-example.c  hello-world.dern  irc-client.dern  openssl-test.dern
doc/examples/plugin/: Makefile  Makefile.FreeBSD  Makefile.Haiku  mylib.c
doc/examples/plugin/amalgamated/: mylib.c
doc/examples/plugin/regular/: mylib.c
doc/examples/plugins/dern_animation/: dern-animation-example.dern
doc/examples/plugins/dern_dir/: dern-dir-example.dern
doc/examples/plugins/dern_easing/: dern-easing-example.dern
doc/examples/plugins/dern_ncurses/: dern-ncurses-example.dern
doc/examples/plugins/dern_sdl2/: dern-sdl2-example.dern
doc/examples/plugins/dern_sockets/: dern-sockets-example.dern
doc/examples/plugins/hello/: use-mylib.dern
etc/: amalgamate.sh  codecov.sh  new-release.sh  octaspire_dern_amalgamated.c  pygments_init.rb
etc/emacs/syntax/: octaspire-dern-mode.el
etc/games/maze/: octaspire-maze.dern
etc/how-to-build/: AROS.sh  AmigaOS41.sh  DragonFlyBSD.sh  FreeBSD.sh  MidnightBSD.sh  NetBSD.sh  OpenBSD.sh  OpenIndiana.sh  Plan9-arm.sh  ReactOS.bat  SyllableDesktop.sh  haiku-x86_64.sh  haiku.sh  linux.sh  macOS.sh  minix3.sh  termux.sh  windows.sh
etc/plugins/: build.sh  dern_animation.c  dern_dir.c  dern_easing.c  dern_ncurses.c  dern_openssl.c  dern_sdl2.c  dern_socket.c
etc/pygments/: dern.py
etc/source-highlight/: dern.lang
etc/vim/syntax/: dern.vim
include/octaspire/dern/: octaspire_dern_c_data.h  octaspire_dern_config.h.in  octaspire_dern_environment.h  octaspire_dern_helpers.h  octaspire_dern_lexer.h  octaspire_dern_lib.h  octaspire_dern_port.h  octaspire_dern_stdlib.h  octaspire_dern_value.h  octaspire_dern_vm.h
release/: LICENSE  README  octaspire-dern-amalgamated.c
release/documentation/: Programming_in_Octaspire_Dern.html  dern-manual.html
release/examples/: chipmunk.dern  dern-animation-example.dern  dern-chipmunk-example.dern  dern-chipmunk-gfx-example.dern  dern-easing-example.dern  dern-ncurses-example.dern  dern-nuklear-example.dern  dern-sdl2-example.dern  dern-sockets-echo-client.dern  dern-sockets-echo-server.dern  dern-sockets-example.dern  dern-sqlite3-example.dern  dern_irc.dern  dern_util.dern  embedding-example.c  irc-client-ncurses.dern  irc-client-nuklear.dern  irc-client.dern  mylib.c
release/games/: octaspire-bounce.dern  octaspire-lightboard.dern  octaspire-lightcube.dern  octaspire-maze.dern
release/how-to-build/: AROS.sh  AmigaOS41.sh  DragonFlyBSD.sh  FreeBSD.sh  MidnightBSD.sh  NetBSD.sh  OpenBSD.sh  OpenIndiana.sh  Plan9.sh  ReactOS.bat  SyllableDesktop.sh  WindowsMinGW.bat  haiku-x86_64.sh  haiku.sh  linux.sh  macOS.sh  minix3.sh  osx.sh  termux.sh  windows-mingw.sh  windows-msvc.bat  windows-msvc.py  windows.sh
release/plugins/: dern_animation.c  dern_chipmunk.c  dern_dir.c  dern_easing.c  dern_ncurses.c  dern_nuklear.c  dern_sdl2.c  dern_socket.c  dern_sqlite3.c  stb_image.h
release/tool-support/emacs/syntax/: octaspire-dern-mode.el
release/tool-support/pygments/: dern.py
release/tool-support/source-highlight/: dern.lang
release/tool-support/vim/syntax/: dern.vim
src/: octaspire_dern_c_data.c  octaspire_dern_environment.c  octaspire_dern_helpers.c  octaspire_dern_lexer.c  octaspire_dern_lib.c  octaspire_dern_port.c  octaspire_dern_repl.c  octaspire_dern_stdlib.c  octaspire_dern_value.c  octaspire_dern_vm.c
test/: CMakeLists.txt  test.c  test_dern_lexer.c  test_dern_vm.c
test/REPL/: E1  E2  E3  E4  E6  E7  E8  file-a.dern  file-b.dern  octaspire-dern-repl.exp  test-REPL-runner.sh  test-a.dern  test-b.dern
test/resource/: octaspire_dern_vm_run_user_factorial_function_test.dern  octaspire_read_and_eval_path_test.dern
(+24 files in other folders)
